--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -1,4 +1,3 @@
-
 header {
     position: fixed;
     top: 20px;
@@ -17,6 +16,10 @@ header {
     transition: all 0.3s ease-in-out;
 }
 
+header h1 {
+    font-weight: normal;
+}
+
 .header-active {
     top: 0;
     left: 0;
@@ -30,8 +33,6 @@ header .title a {
     margin-left: 20px;
     white-space: nowrap;
 }
-
-
 
 .nav_bar {
     margin-left: auto;
@@ -74,6 +75,9 @@ header .fa-bars {
     cursor: pointer;
     margin-left: auto;
     transition: transform 0.2s ease;
+    background: transparent;
+    border: none;
+    padding: 0;
 }
 
 header .fa-bars.fa-times {
@@ -94,7 +98,8 @@ footer img {
     margin: 20px;
 }
 
-footer h5 {
+
+footer .footer-legal {
     max-width: 800px;
     width: 90%;
     margin: 0 auto;
@@ -102,9 +107,8 @@ footer h5 {
     text-transform: uppercase;
     color: #888991;
     line-height: 1.5;
+    font-weight: normal;
 }
-
-
 
 @media (max-width: 800px) {
     header .fa-bars {
@@ -152,7 +156,7 @@ footer h5 {
         border-radius: 0;
     }
 
-    footer h5 {
+    footer .footer-legal {
         width: 100%;
     }
 }
